--- a/web/package.json
+++ b/web/package.json
@@ -15,10 +15,12 @@
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^0.140.18",
     "date-fns": "^1.30.1",
+    "framer-motion": "^1.10.3",
     "gatsby": "^2.9.11",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-sanity": "^4.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
