--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,8 @@
     "gatsby-source-sanity": "^4.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "uifx": "^2.0.7"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
