--- a/web/package.json
+++ b/web/package.json
@@ -22,10 +22,10 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-sanity": "^4.0.1",
+    "howler": "^2.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.0",
-    "uifx": "^2.0.7"
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
