--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^1.10.3",
     "gatsby": "^2.9.11",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-layout": "^1.3.2",
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-transition-link": "^1.18.0",
